2006-11-13  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in (emacsclient): Depend also on emacsclientw.exe.
	($(BLD)/emacsclientw.exe): New target.
	(install): Install emacsclientw.exe.
	($(BLD)/cvtmail.$(O), $(BLD)/emacstool.$(O)): Remove obsolete targets.
	(ECLIENT_CFLAGS): Remove redundant flags.

	* emacsclient.c [WINDOWSNT]: Undef _WINSOCKAPI_ and _WINSOCK_H.

2006-11-13  Jason Rumney  <jasonr@gnu.org>

	* makefile.w32-in ($(BLD)/emacsclient.$(O)): Use CFLAGS.

2006-11-10  David Reitter  <david.reitter@gmail.com>

	* emacsclient.c [!WINDOWSNT]: Include <sys/types.h>.

2006-11-08  Juanma Barranquero  <lekktu@gmail.com>

	* emacsclient.c (get_server_config) [WINDOWSNT]: Declare set_fg as
	FARPROC to avoid a compiler warning.

2006-11-07  Juanma Barranquero  <lekktu@gmail.com>

	* emacsclient.c (get_server_config) [WINDOWSNT]: Look for the server
	file on APPDATA if it doesn't exist on HOME, even if HOME is defined.

	* emacsclient.c (get_server_config): Extract also the Emacs pid
	from the server file.  On Windows, try to force the Emacs frame to
	the foreground.

2006-11-06  Juanma Barranquero  <lekktu@gmail.com>

	* emacsclient.c (longopts) [!NO_SOCKETS_IN_FILE_SYSTEM]: Don't show
	option --socket-name.
	(decode_options): Don't get EMACS_SERVER_FILE here, it could override
	command line options.
	(decode_options) [!NO_SOCKETS_IN_FILE_SYSTEM]: Don't parse "-s" option.
	(fail): Don't check for missing arguments, it is now done in set_socket.
	(file_name_absolute_p): New function (loosely based on the one in
	fileio.c).
	(initialize_sockets): Don't check for duplicate loading of Winsock.
	(get_server_config): Only try relative paths in the default
	directory locations.
	(set_tcp_socket): Don't call INITIALIZE().  Warn when connecting to
	a remote server.
	(set_socket): Call INITIALIZE().  Search explicit command-line
	arguments, then environment variable EMACS_SERVER_FILE, then implicit
	socket paths, before trying the alternate editor.